--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: FastAPI",
+            "type": "python",
+            "request": "launch",
+            "module": "uvicorn",
+            "args": [
+                "BUNK.src.main:app"
+            ],
+            "jinja": true,
+            "justMyCode": true
+        },
+        {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Svelte Debug",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "url":"http://localhost:8080",
+            "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}/FRUNT/src"
         }
     ]
